cluster/k8s/airlock/airlock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlock
  namespace: airlock
  labels:
    app: airlock
    component: server
spec:
  selector:
    app: airlock
    component: server
  ports:
    - name: http
      port: 8765
      targetPort: 8765
      protocol: TCP
  type: ClusterIP
